# redirect-stack

./: .gitignore  Dockerfile  README.fr.md  README.md  config.example.yaml  docker-compose.yml  install.bat  install.sh  pyproject.toml  uninstall.bat
redirectmap/: __init__.py  cli.py  config.py  db.py
redirectmap/classifier/: intent.py
redirectmap/crawler/: async_crawler.py  browser_crawler.py  sitemap.py
redirectmap/exporter/: csv_export.py  htaccess.py  json_export.py  nginx.py
redirectmap/matcher/: cosine.py  fuzzy.py  normalizer.py  pipeline.py
skill/: SKILL.md  redirectmap.skill
